crates/poly-core/tests/snapshots/report__format_json.snap
---
source: crates/poly-core/tests/report.rs
expression: json
---
[
  {
    "path": "src/main.py",
    "changed": true
  },
  {
    "path": "src/clean.py",
    "changed": false
  }
]
