crates/poly-core/tests/snapshots/report__format_pretty.snap
---
source: crates/poly-core/tests/report.rs
expression: text
---
reformatted src/main.py

1 file reformatted.
  2 files checked
