crates/poly-core/tests/snapshots/report__format_pretty_dry_run.snap
---
source: crates/poly-core/tests/report.rs
expression: text
---
would reformat src/main.py

1 file will change.
  2 files checked
