crates/poly-core/tests/snapshots/report__format_toon.snap
---
source: crates/poly-core/tests/report.rs
expression: toon
---
[2]{path,changed}:
  src/main.py,true
  src/clean.py,false
