crates/poly-core/tests/snapshots/report__lint_json.snap
---
source: crates/poly-core/tests/report.rs
expression: json
---
[
  {
    "path": "src/main.py",
    "diagnostics": [
      {
        "engine": "ruff",
        "code": "E501",
        "severity": "warning",
        "title": "line too long",
        "description": "the line exceeds the configured width",
        "span": {
          "start_line": 12,
          "start_col": 80,
          "end_line": 12,
          "end_col": 95
        },
        "url": "https://example.test/rules/E501",
        "metadata": {
          "category": "style",
          "url": "https://example.test/rules/E501"
        }
      },
      {
        "engine": "ruff",
        "severity": "error",
        "title": "syntax error",
        "span": {
          "start_line": 1,
          "start_col": 1,
          "end_line": 1,
          "end_col": 1
        }
      }
    ]
  },
  {
    "path": "src/clean.py",
    "diagnostics": []
  }
]
