crates/poly-core/tests/snapshots/report__lint_pretty.snap
---
source: crates/poly-core/tests/report.rs
expression: text
---
src/main.py
  warning  ruff  E501  12:80  line too long
  error  ruff  1:1  syntax error

2 issues found.
