crates/poly-core/tests/snapshots/report__lint_pretty_debug.snap
---
source: crates/poly-core/tests/report.rs
expression: text
---
src/main.py
  warning  ruff  E501  12:80  line too long
      [debug] ruff v0.11.0  ran  1.00ms
      [debug] typos v1.32.0  cache hit  0.00ms

1 issue found.
