crates/poly-core/tests/snapshots/report__lint_pretty_fixable.snap
---
source: crates/poly-core/tests/report.rs
expression: text
---
src/main.py
  warning  ruff  F401  1:1  unused import
  error  ruff  syntax error

2 issues found.
  1 issue fixable with the `--fix` option
