crates/poly-core/tests/snapshots/report__lint_pretty_verbose.snap
---
source: crates/poly-core/tests/report.rs
expression: text
---
src/main.py
  warning  ruff  E501  12:80  line too long
      the line exceeds the configured width
      https://example.test/rules/E501
      category=style
      url=https://example.test/rules/E501
  error  ruff  1:1  syntax error

2 issues found.
